# coursework_oop

./: README.md  pyproject.toml
src/: main.py  platforms.py  vacancy.py
