[tool.poetry]
name = "coursework-oop"
version = "0.1.0"
description = ""
authors = ["Arlen Asanov <a.asanov2610@gmail.com>"]
readme = "README.md"
packages = [{include = "coursework_oop"}]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.2"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
